tests/xml/validxml/raDec/goodradec2.xml.README
goodradec2.xml: OK ra, dec is 0.0000000, 90.00000
