tests/xml/invalidxml/raDec/baddec1.xml.README
baddec1.xml: BAD dec is -90.00087 -- range is -90.O to 90.0 inclusive
